<resources>
    <string name="app_name">VikLoc</string>

    <string name="hint_user">Korisničko ime</string>
    <string name="hint_password">Lozinka</string>
    <string name="text_login">Prijava</string>
    <string name="textviewkategorije">Kategorije artikala</string>
    <string name="textviewdodajkategoriju">Dodaj kategoriju</string>
    <string name="textviewdodajartikl">Dodaj artikl</string>
    <string name="text_save">Spremi</string>
    <string name="search_title">Pretraži</string>
    <string name="search_hint">Pretraži</string>
    <string name="logo">logo</string>
    <string name="oznakaSkladista">Oznaka skladišnog mjesta</string>
    <string name="nazivSkladista">Naziv skladišta</string>
    <string name="opisSkladista">Opis skladišta</string>
    <string name="adresaSkladista">Adresa skladišta</string>
    <string name="textviewkdetaljiartikla">Detalji artikla</string>
</resources>
