<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/textviewkategorije"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listKategorije"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_gravity="center">


        </ListView>


    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingDodajKategoriju"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listKategorije"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:clickable="true"
        app:layout_anchor="@+id/relativeLayout"
        app:layout_anchorGravity="bottom|right"
        android:layout_marginBottom="40dp"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_input_add" />

</android.support.design.widget.CoordinatorLayout>