<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mapaAktivacija"
        android:orderInCategory="100"
        android:title="Mapa: ON"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/mapaDeaktivacija"
        android:orderInCategory="100"
        android:title="Mapa: OFF"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_title"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="withText|ifRoom"
        />

</menu>