package vikmax.vikloc;


import android.support.test.espresso.DataInteraction;
import android.support.test.espresso.ViewInteraction;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onData;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MenuActivityTest {

    @Rule
    public ActivityTestRule<LoginActivity> mActivityTestRule = new ActivityTestRule<>(LoginActivity.class);

    @Test
    public void menuActivityTest() {
        ViewInteraction textInputEditText = onView(
                allOf(withId(R.id.textInput_user),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.textInputLayoutUser),
                                        0),
                                0),
                        isDisplayed()));
        textInputEditText.perform(replaceText("hrvoje"), closeSoftKeyboard());

        ViewInteraction textInputEditText2 = onView(
                allOf(withId(R.id.textInput_password),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.textInputLayoutPassword),
                                        0),
                                0),
                        isDisplayed()));
        textInputEditText2.perform(replaceText("admin"), closeSoftKeyboard());

        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.button_login), withText("Prijava"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.nestedScrollView),
                                        0),
                                3),
                        isDisplayed()));
        appCompatButton.perform(click());

        DataInteraction appCompatTextView = onData(anything())
                .inAdapterView(allOf(withId(R.id.listKategorije),
                        childAtPosition(
                                withId(R.id.relativeLayout),
                                1)))
                .atPosition(0);
        appCompatTextView.perform(click());

        ViewInteraction textView = onView(
                allOf(withText("Medicinska oprema"),
                        childAtPosition(
                                allOf(withId(R.id.toolbar_kategorija),
                                        childAtPosition(
                                                withId(R.id.relativeLayout),
                                                0)),
                                0),
                        isDisplayed()));
        textView.check(matches(withText("Medicinska oprema")));

        DataInteraction appCompatTextView2 = onData(anything())
                .inAdapterView(allOf(withId(R.id.listArtikli),
                        childAtPosition(
                                withId(R.id.relativeLayout),
                                1)))
                .atPosition(0);
        appCompatTextView2.perform(click());

        ViewInteraction textView2 = onView(
                allOf(withId(R.id.textViewDetaljiArtikla), withText("Sterilizator MS1245"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        textView2.check(matches(withText("Sterilizator MS1245")));

        pressBack();

        pressBack();

        DataInteraction appCompatTextView3 = onData(anything())
                .inAdapterView(allOf(withId(R.id.listKategorije),
                        childAtPosition(
                                withId(R.id.relativeLayout),
                                1)))
                .atPosition(4);
        appCompatTextView3.perform(click());

        ViewInteraction textView3 = onView(
                allOf(withText("Nauticka oprema"),
                        childAtPosition(
                                allOf(withId(R.id.toolbar_kategorija),
                                        childAtPosition(
                                                withId(R.id.relativeLayout),
                                                0)),
                                0),
                        isDisplayed()));
        textView3.check(matches(withText("Nauticka oprema")));

        DataInteraction appCompatTextView4 = onData(anything())
                .inAdapterView(allOf(withId(R.id.listArtikli),
                        childAtPosition(
                                withId(R.id.relativeLayout),
                                1)))
                .atPosition(0);
        appCompatTextView4.perform(click());

        ViewInteraction textView4 = onView(
                allOf(withId(R.id.textViewDetaljiArtikla), withText("Sidro 13kg"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        textView4.check(matches(withText("Sidro 13kg")));

        pressBack();

        pressBack();

    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
